# VRChat-Avatar-Menu

./: .gitmodules  Cargo.toml  README.md
vrchat-avatar-menu/: Cargo.toml
vrchat-avatar-menu/src/: main.rs  params.rs  ui.rs
