[package]
name = "vrchat-avatar-menu"
version = "0.1.0"
edition = "2021"
authors = ["Zoe <zoe@zyoh.ca>"]

[dependencies]
vrchat_osc = { path = "../submodules/Rust-VRChat-OSC/vrchat-osc" }
rosc = "0.9.1"
egui = "0.20.1"
eframe = "0.20.1"
rfd = "0.11.0"
lazy_static = "1.4.0"
serde_json = "1.0.91"
regex = "1.7.1"
